src/z80asm/z80asm2/t/30-directive/expected/binary_13.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/binary_13.asm
Assembling t/30-directive/input/binary_13.asm...
t/30-directive/input/binary_13.asm:1:30: error: Unexpected token after BINARY: extra
    #binary "file_not_found.bin" extra
                                 ^
